# hal_alif

./: .checkpatch.conf  .gitignore  .gitlint  CMakeLists.txt  linker_add_rom_symbols.ld
ble/: CMakeLists.txt
ble/plf/: alif_ble.c  alif_ble.h  hci_uart.c
ble/v1_0/: CMakeLists.txt
ble/v1_0/include/rwip/: rwip_config.h
ble/v1_0/plf/: rom_build_cfg.h
ble/v1_2/: CMakeLists.txt
ble/v1_2/include/common/: co_version.h
common/: CMakeLists.txt
common/include/: es0_power_manager.h  soc_memory_map.h
common/src/: es0_power_manager.c  system.c
common/zephyr/: Kconfig
drivers/: CMakeLists.txt
drivers/analog/: CMakeLists.txt
drivers/analog/include/: analog_ctrl.h
drivers/analog/src/: analog_ctrl.c
drivers/dma_event_router/include/: dma_event_router.h
drivers/dma_event_router/src/: dma_event_router.c
drivers/ospi/include/: ospi.h  ospi_hal.h
drivers/ospi/src/: ospi.c  ospi_hal.c
ieee802154/include/: alif_mac154_api.h
ieee802154/src/: alif_ahi.c  alif_mac154_api.c
lc3/: CMakeLists.txt
lc3/v1_2/include/: alif_lc3.h
lc3/zephyr/: Kconfig
scripts/gitlint/: rules.py
se_services/include/: aipm.h  services_lib_api.h  services_lib_ids.h  services_lib_protocol.h
se_services/zephyr/include/: se_service.h
se_services/zephyr/src/: se_service.c
zephyr/: Kconfig
